--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine on
-RewriteRule ^login$ index.php
+RewriteRule ^login$ login1.php
 RewriteRule ^shop$ shop.php
+RewriteRule ^boulangerie$ index.php
